--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Projeto Wide Coverage</title>
+    <title>Projeto Easy Shopping</title>
 </head>
 
 <body>
